main.tf
#this is just dummy file used for main branch. main code is in vpc.tf file
# resource "aws_vpc" "main" {
#   cidr_block       = "10.0.0.0/16"
#   instance_tenancy = "default"

#   tags = {
#     "Name" = "main"
#   }
# }
